# squirrel

./: CMakeLists.txt
cmake/: SquirrelConfig.cmake.in
sq/: CMakeLists.txt
sqstdlib/: CMakeLists.txt
squirrel/: CMakeLists.txt
