if(CMAKE_COMPILER_IS_GNUCXX)
set_source_files_properties(sq.c PROPERTIES COMPILE_FLAGS -std=c99)
endif()
add_executable(sq sq.c)
set_target_properties(sq PROPERTIES LINKER_LANGUAGE C)
target_link_libraries(sq squirrel sqstdlib)
if(NOT SQ_DISABLE_INSTALLER)
install(TARGETS sq RUNTIME DESTINATION ${INSTALL_BIN_DIR})
endif()

if(LONG_OUTPUT_NAMES)
    set_target_properties(sq PROPERTIES OUTPUT_NAME squirrel3)
endif()
